# lv_lib_split_jpg

./: .editorconfig  .gitattributes  CMakeLists.txt  README.md  lv_sjpg.c  lv_sjpg.h  tjpgd.h
.github/workflows/: pr_audit.yml  push_audit.yml
example/: demo_jpg_sjpg.c
sample_sjpg_images/: small_image.c  small_image_sjpg.c  wallpaper.c
scripts/: jpeg_to_sjpeg.py  jpg_to_sjpg.py
